community service controller tests